--- a/src/main/resources/templates/contract.html
+++ b/src/main/resources/templates/contract.html
@@ -109,7 +109,7 @@
         <p><strong>地址：</strong>合肥紫钧光恒有限公司</p>
     </div>
     <div>
-        <p><strong>合同编号：</strong>JHS20240601001</p>
+        <p><strong>合同编号：</strong><span th:text="${contractNo}"></span></p>
         <p><strong>签订地点：</strong>中国·武汉</p>
         <p><strong>签订时间：</strong><span th:text="${currentDate}"></span></p>
     </div>
